--- a/W9_Collaborative_RecSys_Assignment.ipynb
+++ b/W9_Collaborative_RecSys_Assignment.ipynb
@@ -43,62 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: tensorflow in c:\\anaconda\\lib\\site-packages (2.16.1)\n",
-      "Requirement already satisfied: tensorflow-intel==2.16.1 in c:\\anaconda\\lib\\site-packages (from tensorflow) (2.16.1)\n",
-      "Requirement already satisfied: absl-py>=1.0.0 in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (2.1.0)\n",
-      "Requirement already satisfied: astunparse>=1.6.0 in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (1.6.3)\n",
-      "Requirement already satisfied: flatbuffers>=23.5.26 in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (24.3.25)\n",
-      "Requirement already satisfied: gast!=0.5.0,!=0.5.1,!=0.5.2,>=0.2.1 in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (0.5.4)\n",
-      "Requirement already satisfied: google-pasta>=0.1.1 in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (0.2.0)\n",
-      "Requirement already satisfied: h5py>=3.10.0 in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (3.10.0)\n",
-      "Requirement already satisfied: libclang>=13.0.0 in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (18.1.1)\n",
-      "Requirement already satisfied: ml-dtypes~=0.3.1 in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (0.3.2)\n",
-      "Requirement already satisfied: opt-einsum>=2.3.2 in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (3.3.0)\n",
-      "Requirement already satisfied: packaging in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (23.1)\n",
-      "Requirement already satisfied: protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<5.0.0dev,>=3.20.3 in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (4.25.3)\n",
-      "Requirement already satisfied: requests<3,>=2.21.0 in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (2.31.0)\n",
-      "Requirement already satisfied: setuptools in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (68.0.0)\n",
-      "Requirement already satisfied: six>=1.12.0 in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (1.16.0)\n",
-      "Requirement already satisfied: termcolor>=1.1.0 in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (2.4.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.6.6 in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (4.7.1)\n",
-      "Requirement already satisfied: wrapt>=1.11.0 in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (1.14.1)\n",
-      "Requirement already satisfied: grpcio<2.0,>=1.24.3 in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (1.62.1)\n",
-      "Requirement already satisfied: tensorboard<2.17,>=2.16 in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (2.16.2)\n",
-      "Requirement already satisfied: keras>=3.0.0 in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (3.1.1)\n",
-      "Requirement already satisfied: tensorflow-io-gcs-filesystem>=0.23.1 in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (0.31.0)\n",
-      "Requirement already satisfied: numpy<2.0.0,>=1.23.5 in c:\\anaconda\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (1.24.3)\n",
-      "Requirement already satisfied: wheel<1.0,>=0.23.0 in c:\\anaconda\\lib\\site-packages (from astunparse>=1.6.0->tensorflow-intel==2.16.1->tensorflow) (0.38.4)\n",
-      "Requirement already satisfied: rich in c:\\anaconda\\lib\\site-packages (from keras>=3.0.0->tensorflow-intel==2.16.1->tensorflow) (13.7.1)\n",
-      "Requirement already satisfied: namex in c:\\anaconda\\lib\\site-packages (from keras>=3.0.0->tensorflow-intel==2.16.1->tensorflow) (0.0.7)\n",
-      "Requirement already satisfied: optree in c:\\anaconda\\lib\\site-packages (from keras>=3.0.0->tensorflow-intel==2.16.1->tensorflow) (0.11.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\anaconda\\lib\\site-packages (from requests<3,>=2.21.0->tensorflow-intel==2.16.1->tensorflow) (2.0.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\anaconda\\lib\\site-packages (from requests<3,>=2.21.0->tensorflow-intel==2.16.1->tensorflow) (3.4)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\anaconda\\lib\\site-packages (from requests<3,>=2.21.0->tensorflow-intel==2.16.1->tensorflow) (1.26.16)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\anaconda\\lib\\site-packages (from requests<3,>=2.21.0->tensorflow-intel==2.16.1->tensorflow) (2024.2.2)\n",
-      "Requirement already satisfied: markdown>=2.6.8 in c:\\anaconda\\lib\\site-packages (from tensorboard<2.17,>=2.16->tensorflow-intel==2.16.1->tensorflow) (3.4.1)\n",
-      "Requirement already satisfied: tensorboard-data-server<0.8.0,>=0.7.0 in c:\\anaconda\\lib\\site-packages (from tensorboard<2.17,>=2.16->tensorflow-intel==2.16.1->tensorflow) (0.7.2)\n",
-      "Requirement already satisfied: werkzeug>=1.0.1 in c:\\anaconda\\lib\\site-packages (from tensorboard<2.17,>=2.16->tensorflow-intel==2.16.1->tensorflow) (2.2.3)\n",
-      "Requirement already satisfied: MarkupSafe>=2.1.1 in c:\\anaconda\\lib\\site-packages (from werkzeug>=1.0.1->tensorboard<2.17,>=2.16->tensorflow-intel==2.16.1->tensorflow) (2.1.1)\n",
-      "Requirement already satisfied: markdown-it-py>=2.2.0 in c:\\anaconda\\lib\\site-packages (from rich->keras>=3.0.0->tensorflow-intel==2.16.1->tensorflow) (2.2.0)\n",
-      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in c:\\anaconda\\lib\\site-packages (from rich->keras>=3.0.0->tensorflow-intel==2.16.1->tensorflow) (2.15.1)\n",
-      "Requirement already satisfied: mdurl~=0.1 in c:\\anaconda\\lib\\site-packages (from markdown-it-py>=2.2.0->rich->keras>=3.0.0->tensorflow-intel==2.16.1->tensorflow) (0.1.0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install tensorflow"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -254,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -290,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -377,53 +322,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "metadata": {
     "deletable": false
    },
    "outputs": [],
    "source": [
+    "# GRADED FUNCTION: cofi_cost_func\n",
+    "# UNQ_C1\n",
+    "\n",
     "def cofi_cost_func(X, W, b, Y, R, lambda_):\n",
     "    \"\"\"\n",
     "    Returns the cost for the content-based filtering\n",
-    "\n",
     "    Args:\n",
-    "    X (ndarray (num_movies, num_features)): matrix of item features\n",
-    "    W (ndarray (num_users, num_features)): matrix of user parameters\n",
-    "    b (ndarray (1, num_users)): vector of user parameters\n",
-    "    Y (ndarray (num_movies, num_users)): matrix of user ratings of movies\n",
-    "    R (ndarray (num_movies, num_users)): matrix, where R(i, j) = 1 if the i-th movie was rated by the j-th user\n",
-    "    lambda_ (float): regularization parameter\n",
-    "\n",
+    "      X (ndarray (num_movies,num_features)): matrix of item features\n",
+    "      W (ndarray (num_users,num_features)) : matrix of user parameters\n",
+    "      b (ndarray (1, num_users)            : vector of user parameters\n",
+    "      Y (ndarray (num_movies,num_users)    : matrix of user ratings of movies\n",
+    "      R (ndarray (num_movies,num_users)    : matrix, where R(i, j) = 1 if the i-th movies was rated by the j-th user\n",
+    "      lambda_ (float): regularization parameter\n",
     "    Returns:\n",
-    "    J (float): Cost\n",
+    "      J (float) : Cost\n",
     "    \"\"\"\n",
-    "\n",
-    "    num_movies, num_users = Y.shape\n",
-    "    num_features = X.shape[1]\n",
+    "    nm, nu = Y.shape\n",
     "    J = 0\n",
+    "    ### START CODE HERE ###  \n",
+    "    \n",
+    "     # Predicted movie ratings for all users\n",
+    "    pred_ratings = X.dot(W.T) + b\n",
+    "    # Error between the predicted and actual ratings (considered only for rated movies)\n",
+    "    error = (pred_ratings - Y) * R\n",
+    "    # Cost calculation without regularization\n",
+    "    cost = 0.5 * np.sum(error**2)\n",
+    "    # Regularization terms for X and W\n",
+    "    reg_X = 0.5 * lambda_ * np.sum(X**2)\n",
+    "    reg_W = 0.5 * lambda_ * np.sum(W**2)\n",
+    "    # Total cost\n",
+    "    J = cost + reg_X + reg_W\n",
     "\n",
-    "    for i in range(num_movies):\n",
-    "        for j in range(num_users):\n",
-    "            if R[i, j] == 1:\n",
-    "                predicted_rating = np.dot(X[i, :], W[j, :]) + b[0, j]\n",
-    "                rating_error = predicted_rating - Y[i, j]\n",
-    "                J += (rating_error ** 2)\n",
-    "\n",
-    "    # Regularization\n",
-    "    cost_reg_X = (lambda_ / 2) * np.sum(X**2)\n",
-    "    cost_reg_W = (lambda_ / 2) * np.sum(W**2)\n",
-    "    cost_reg_b = (lambda_ / 2) * np.sum(b**2)\n",
-    "\n",
-    "    J = (1 / 2) * J\n",
-    "    J += cost_reg_X + cost_reg_W + cost_reg_b\n",
+    "    \n",
+    "    ### END CODE HERE ### \n",
     "\n",
     "    return J"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -466,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -476,7 +421,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost (with regularization): 28.32\n"
+      "Cost (with regularization): 28.09\n"
      ]
     }
    ],
@@ -499,22 +444,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "editable": false
    },
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "Wrong value. Expected 103.5, got 105.5. Check the term without the regularization",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[57], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Public tests\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpublic_tests\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m----> 3\u001b[0m test_cofi_cost_func(cofi_cost_func)\n",
-      "File \u001b[1;32m~\\Collaborative-Filtering-Recommender-Systems\\public_tests.py:51\u001b[0m, in \u001b[0;36mtest_cofi_cost_func\u001b[1;34m(target)\u001b[0m\n\u001b[0;32m     48\u001b[0m \u001b[38;5;66;03m# Evaluate cost function\u001b[39;00m\n\u001b[0;32m     49\u001b[0m J \u001b[38;5;241m=\u001b[39m target(X_r, W_r, b_r, Y_r, R_r, \u001b[38;5;241m1\u001b[39m);\n\u001b[1;32m---> 51\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39misclose(J, \u001b[38;5;241m103.5\u001b[39m), \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWrong value. Expected \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;241m103.5\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mJ\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m. Check the term without the regularization\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     53\u001b[0m num_users_r \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3\u001b[39m\n\u001b[0;32m     54\u001b[0m num_movies_r \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m4\u001b[39m \n",
-      "\u001b[1;31mAssertionError\u001b[0m: Wrong value. Expected 103.5, got 105.5. Check the term without the regularization"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92mAll tests passed!\n"
      ]
     }
    ],
@@ -537,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -565,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -621,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "id": "WJO8Jr0UodYR"
@@ -692,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -721,13 +661,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.Adam` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.Adam`.\n"
+     ]
+    }
+   ],
    "source": [
     "#  Useful Values\n",
     "num_movies, num_users = Y.shape\n",
@@ -769,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -829,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -902,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1162,7 +1110,7 @@
        "622      Harry Potter and the Chamber of Secrets (2002)  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,6 +1154,13 @@
     "        <img src=\"https://lh3.google.com/u/0/d/14Xy_Mb17CZVgzVAgq7NCjMVBvSae3xO1\" align=\"center\" alt=\"unlock_cells.gif\">\n",
     "</details>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
